--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           enfrentarce a nuevos retos.
         </p>
         <p class="col-lg-8 lead w-50">
-          Ahora me encuentro un poco lejos de casa, aprendiendo el gran conocimiento de una desarrolladora frontend.
+          Ahora me encuentro un poco lejos de casa, aprendiendo el gran conocimiento de una desarrolladora frontend JR.
         </p>
         <p class="col-lg-8 lead w-50">
           ¡Siempre dispuesta a aprender y enseñar lo que se!
