--- a/index.html
+++ b/index.html
@@ -31,29 +31,30 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="text-white nav-link active" aria-current="page" href="#">Yo</a>
+            <a class="text-white nav-link active" aria-current="page" href="#Yo">Yo</a>
           </li>
           <li class="nav-item">
-            <a class="text-white nav-link" href="#">Habilidades</a>
+            <a class="text-white nav-link" href="#habilidades">Habilidades</a>
           </li>
           <li class="nav-item">
-            <a class="text-white nav-link" href="#">Proyectos</a>
+            <a class="text-white nav-link" href="#Proyectos">Proyectos</a>
           </li>
           <li class="nav-item">
-            <a class="text-white nav-link" href="#">Testimonios</a>
+            <a class="text-white nav-link" href="#Testimonios">Testimonios</a>
           </li>
           <li class="nav-item">
-            <a class="text-white nav-link" href="#">Contactos</a>
+            <a class="text-white nav-link" href="#contacto">Contactos</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
+
   <header class="vh-100 d-flex flex-column justify-content-center">
     <div class="p-5 text-left text-white">
       <div class="container py-5">
-        <h1 class="letra-color">Stefanie Vera</h1>
-        <h2 class="letra-color">Estudiante</h2>
+        <h1 id="Yo" class="letra-color">Stefanie Vera</h1>
+        <h2 id="app" class="letra-color">Estudiante</h2>
         <p class="col-lg-8 lead w-50">
           Soy una estudiante de Economía y Finanzas Internacionales, orgullosamente gamo de la UMQ. Que ama aprender y
           enfrentarce a nuevos retos.
@@ -65,12 +66,16 @@
           ¡Siempre dispuesta a aprender y enseñar lo que se!
         </p>
         <div>
-          <button type="button" class="btn btn-dark btn-lg px-3 gap-2">Contáctame</button>
-          <a class="px-3 py-2" href="mailto:stefanie.vera0@gmail.com">stefanie.vera0@gmail.com</a>
+          <a href="#contacto" class="btn btn-dark btn-lg px-3 gap-2">
+            Contáctame
+          </a>
+          <a class="px-3 py-2 text-warning" href="mailto:stefanie.vera0@gmail.com">stefanie.vera0@gmail.com</a>
+
         </div>
       </div>
     </div>
   </header>
+
   <main>
     <section id="habilidades">
       <div class="container px-4 py-5" id="hanging-icons">
@@ -78,14 +83,14 @@
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
           <div class="col d-flex align-items-start">
             <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
-            <i class="bi bi-pc-display icono-gigante"></i>
+              <i class="bi bi-pc-display icono-gigante"></i>
             </div>
             <div>
               <h2>Desarrollo Web</h2>
-              <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence
-                and probably just keep going until we run out of words.</p>
-              <a href="#" class="btn btn-primary">
-                Primary button
+              <p>Creadora de sitios web con HTML, CSS y JS. Apasionada del internet y de compartir mis conocimientos.
+                Llevando a cabo proyectos retadores.</p>
+              <a href="#Proyectos" class="btn btn-warning">
+                Mis proyectos
               </a>
             </div>
           </div>
@@ -95,11 +100,9 @@
             </div>
             <div>
               <h2>Trabajo en equipo</h2>
-              <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence
-                and probably just keep going until we run out of words.</p>
-              <a href="#" class="btn btn-primary">
-                Primary button
-              </a>
+              <p>Siempre dispuesta a trabajar con otros y desarrollarnos como equipo, para llegar a los objetivos
+                planeados, creando un buen ambiente laboral. Guiándonos por la flexibilidad y dirección.
+              </p>
             </div>
           </div>
           <div class="col d-flex align-items-start">
@@ -108,28 +111,256 @@
             </div>
             <div>
               <h2>Responsabilidad</h2>
-              <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence
-                and probably just keep going until we run out of words.</p>
-              <a href="#" class="btn btn-primary">
-                Primary button
-              </a>
+              <p>Soy una persona responsable, encaminada a lograr objetivos y disponer de los recursos y tiempos
+                necesarios para ello. Concluyendo satisfactoriamente lo planeado, respondiendo y poniendo cuidado en mis
+                acciones.</p>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <section id="Proyectos"></section>
-    <section id="Testimonios"></section>
+
+    <section id="Proyectos">
+      <div class="album py-5 bg-body-tertiary">
+        <div class="container">
+          <h2 class="my-5 border-bottom pb-2">Proyectos</h2>
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+
+            <!--Inicia proyecto 1-->
+            <div class="col">
+              <div class="card shadow-sm">
+                <figure>
+                  <img src="assets/Captura 3.png" class="img-proyecto" alt="Proyecto Clon de Google">
+                </figure>
+                <main class="card-body">
+                  <h5 class="card-title">Clon de Google</h5>
+                  <p class="card-text">Proyecto realizado por medio de HTML y CSS que busca replicar el sitio web de
+                    www.google.com, agregando algunas personalizaciones para poner en práctica mi conocimiento
+                    aprendido.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <button type="button" class="btn btn-sm btn-outline-secondary">
+                        <a href="https://idyllic-trifle-ba5876.netlify.app/" target="_blank"
+                          class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">
+                          Ver
+                        </a>
+                      </button>
+                </main>
+              </div>
+            </div>
+            <!--Termina proyecto 1-->
+
+
+            <!--Inicia proyecto 2-->
+            <div class="col">
+              <div class="card shadow-sm">
+                <figure>
+                  <img src="assets/Captura 2.png" class="img-proyecto" alt="Mi primera página">
+                </figure>
+                <main class="card-body">
+                  <h5 class="card-title">Mi primera página</h5>
+                  <p class="card-text">Proyecto realizado por medio de HTML y CSS que busca iniciar con los
+                    conocimientos y la práctica de programación de páginas web. Proyecto realizado mediante el curso de
+                    Technolochicas PRO.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <button type="button" class="btn btn-sm btn-outline-secondary">
+                        <a href="https://beautiful-page-0102.netlify.app/" target="_blank"
+                          class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">
+                          Ver
+                        </a>
+                      </button>
+                </main>
+              </div>
+            </div>
+
+            <!--Termina proyecto 2-->
+
+
+            <!--Inicia proyecto 3-->
+            <div class="col">
+              <div class="card shadow-sm">
+                <figure>
+                  <img src="assets/Captura1.png" class="img-proyecto" alt="Display">
+                </figure>
+                <main class="card-body">
+                  <h5 class="card-title">Display</h5>
+                  <p class="card-text">Proyecto realizado por medio de HTML y CSS que busca iniciar con los
+                    conocimientos y la práctica sobre la aplicación del Display. Proyecto realizado mediante el curso de
+                    Technolochicas PRO.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <button type="button" class="btn btn-sm btn-outline-secondary">
+                        <a href="https://pagine-display-01.netlify.app/" target="_blank"
+                          class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">
+                          Ver
+                        </a>
+                      </button>
+                </main>
+              </div>
+            </div>
+            <!--Termina proyecto 3-->
+
+
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="Testimonios" class="container">
+
+      <div class="container px-4 py-5" id="hanging-icons">
+        <h2 class="pb-2 border-bottom">Testimonios</h2>
+
+        <h2 class="my-5"></h2>
+
+        <div id="carouselExampleDark" class="carousel carousel-dark slide">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+              aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+              aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+              aria-label="Slide 3"></button>
+          </div>
+
+          <!-- Sección editable del carrusel -->
+          <div class="carousel-inner">
+            <div class="carousel-item active " data-bs-interval="10000">
+              <div class="d-flex justify-content-center">
+                <div class="card mb-3 border-0" style="max-width: 540px;">
+                  <div class="row g-0">
+                    <div class="col-md-4">
+                      <img src="assets/Foto.png" class="img-fluid rounded-circle" alt="Testimonio Mark Zukemberg">
+                    </div>
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <h5 class="card-title">Mtro. Javier Vera</h5>
+                        <p class="card-text"><small class="text-body-secondary">Doctorante en Administración Estratégica
+                            Empresarial</small></p>
+                        <p class="card-text">Stefanie es una profesional comprometida a su trabajo, con una gran
+                          capacidad de adaptación y aprendizaje.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="carousel-item " data-bs-interval="2000">
+              <div class="d-flex justify-content-center">
+                <div class="card mb-3 border-0" style="max-width: 540px;">
+                  <div class="row g-0">
+                    <div class="col-md-4">
+                      <img src="assets/Foto2.png" class="img-fluid rounded-circle" alt="Testimonio Mark Zukemberg">
+                    </div>
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <h5 class="card-title">Srta. Izza Anel</h5>
+                        <p class="card-text"><small class="text-body-secondary">Estudiante de Negocios
+                            Internacionales</small></p>
+                        <p class="card-text">Una profesional con gran calidad humana. Conozco a Stefanie desde hace 5
+                          años, en los cuales me ha mostrado su capacidad de relacionarse y aprender de otros.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="carousel-item" data-bs-interval="2000">
+              <div class="d-flex justify-content-center">
+                <div class="card mb-3 border-0" style="max-width: 540px;">
+                  <div class="row g-0">
+                    <div class="col-md-4">
+                      <img src="assets/Foto3.png" class="img-fluid rounded-circle" alt="Testimonio Mark Zukemberg">
+                    </div>
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <h5 class="card-title">Srta. Sara Hernández</h5>
+                        <p class="card-text"><small class="text-body-secondary">Estudiante de Economía</small></p>
+                        <p class="card-text">Stefanie es una colega muy capaz y comprometida, dedicada al cumplimiento
+                          de los objetivos, logrando resultados de los más altos estándares.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+          <!-- Fin sección editable del carrusel -->
+
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+    </section>
+
   </main>
 
-  <footer id="contacto">
+  <section id="contacto">
 
+    <div class="album py-5 bg-body-tertiary">
+      <div class="container">
+
+        <div class="px-4 py-5 my-5 text-center">
+          <h1 class="display-5 fw-bold text-body-emphasis ">Contáctame</h1>
+          <i class="bi bi-person-rolodex icono-gigante"></i>
+          <h2 class="display-6 fw-bold ">El conocimiento es poder.</h2>
+          <h5>Sir Francis Bacon</h5>
+          <div class="col-lg-6 mx-auto">
+            <p class="lead mb-4">Espero que podamos trabajar juntos, guiando nuestro camino por el conocimiento, en
+              busca del objetivo.</p>
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+              <a href="https://github.com/Sfanie" target="_blank" rel="noopener noreferrer">
+                <i class="bi-github icono-contacto"></i>
+              </a>
+              <a href="https://www.instagram.com/vera_stefanie_/" target="_blank" rel="noopener noreferrer">
+                <i class="bi-instagram icono-contacto"></i>
+              </a>
+              <a href="http://" target="_blank" rel="noopener noreferrer">
+                <i class="bi-linkedin icono-contacto"></i>
+              </a>
+              <a href="mailto:stefanie.vera0@gmail.com" target="_blank" rel="noopener noreferrer">
+                <i class="bi-envelope icono-contacto"></i>
+              </a>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top bg-black text-white">
+    <div class="col-md-4 d-flex align-items-center">
+      <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+        <svg class="bi" width="30" height="24">
+          <use xlink:href="#bootstrap"></use>
+        </svg>
+      </a>
+      <span class="mb-3 mb-md-0 text-body-secondary-white">© 2024 Technolochicas PRO, Stefanie Vera</sp an>
+    </div>
   </footer>
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+
+  <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+
+  <script src="script.js"></script>
+
 </body>
 
 </html>
