--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     </div>
                     <div class="col-md-8">
                       <div class="card-body">
-                        <h5 class="card-title">Mtro. Javier Vera</h5>
+                        <h5 class="card-title">Drando Javier Vera</h5>
                         <p class="card-text"><small class="text-body-secondary">Doctorante en Administración Estratégica
                             Empresarial</small></p>
                         <p class="card-text">Stefanie es una profesional comprometida a su trabajo, con una gran
