--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
               <a href="https://www.instagram.com/vera_stefanie_/" target="_blank" rel="noopener noreferrer">
                 <i class="bi-instagram icono-contacto"></i>
               </a>
-              <a href="http://" target="_blank" rel="noopener noreferrer">
+              <a href="https://www.linkedin.com/in/stefanie-v-292146194/" target="_blank" rel="noopener noreferrer">
                 <i class="bi-linkedin icono-contacto"></i>
               </a>
               <a href="mailto:stefanie.vera0@gmail.com" target="_blank" rel="noopener noreferrer">
