--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
   </nav>
 
-  <header class="vh-100 d-flex flex-column justify-content-center">
+  <header class="d-flex flex-column justify-content-center">
     <div class="p-5 text-left text-white">
       <div class="container py-5">
         <h1 id="Yo" class="letra-color">Stefanie Vera</h1>
