--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="container py-5">
         <h1 id="Yo" class="letra-color">Stefanie Vera</h1>
         <h2 id="app" class="letra-color">Estudiante</h2>
-        <p class="col-lg-8 lead w-50">
+        <p class="col-lg-8 lead w-50 text-align: justify;">
           Soy una estudiante de Economía y Finanzas Internacionales, orgullosamente gamo de la UMQ. Que ama aprender y
           enfrentarce a nuevos retos.
         </p>
@@ -141,7 +141,7 @@
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
-                        <a href="https://idyllic-trifle-ba5876.netlify.app/" target="_blank"
+                        <a href="https://clon-de-google-0.netlify.app/" target="_blank"
                           class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">
                           Ver
                         </a>
@@ -232,12 +232,12 @@
                 <div class="card mb-3 border-0" style="max-width: 540px;">
                   <div class="row g-0">
                     <div class="col-md-4">
-                      <img src="assets/Foto.png" class="img-fluid rounded-circle" alt="Testimonio Mark Zukemberg">
+                      <img src="assets/Foto.png" class="img-fluid rounded-circle" alt="Testimonio Drando.Javier">
                     </div>
                     <div class="col-md-8">
                       <div class="card-body">
                         <h5 class="card-title">Drando. Javier Vera</h5>
-                        <p class="card-text"><small class="text-body-secondary">Doctorante en Administración Estratégica
+                        <p class="card-text" style="text-align: left;"><small class="text-body-secondary">Doctorante en Administración Estratégica
                             Empresarial</small></p>
                         <p class="card-text">Stefanie es una profesional comprometida a su trabajo, con una gran
                           capacidad de adaptación y aprendizaje.</p>
@@ -253,7 +253,7 @@
                 <div class="card mb-3 border-0" style="max-width: 540px;">
                   <div class="row g-0">
                     <div class="col-md-4">
-                      <img src="assets/Foto2.png" class="img-fluid rounded-circle" alt="Testimonio Mark Zukemberg">
+                      <img src="assets/Foto2.png" class="img-fluid rounded-circle" alt="Testimonio Srta.Izza">
                     </div>
                     <div class="col-md-8">
                       <div class="card-body">
@@ -274,7 +274,7 @@
                 <div class="card mb-3 border-0" style="max-width: 540px;">
                   <div class="row g-0">
                     <div class="col-md-4">
-                      <img src="assets/Foto3.png" class="img-fluid rounded-circle" alt="Testimonio Mark Zukemberg">
+                      <img src="assets/Foto3.png" class="img-fluid rounded-circle" alt="Testimonio Srta.Sara">
                     </div>
                     <div class="col-md-8">
                       <div class="card-body">
@@ -318,7 +318,7 @@
           <h2 class="display-6 fw-bold ">El conocimiento es poder.</h2>
           <h5>Sir Francis Bacon</h5>
           <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4">Espero que podamos trabajar juntos, guiando nuestro camino por el conocimiento, en
+            <p class="lead mb-4" style="text-align: center;">Espero que podamos trabajar juntos, guiando nuestro camino por el conocimiento, en
               busca del objetivo.</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
               <a href="https://github.com/Sfanie" target="_blank" rel="noopener noreferrer">
